Codigo HTML listo

--- a/index.html
+++ b/index.html
@@ -4,11 +4,57 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Curriculum Vitae</title>
+  <title>Datos Personales</title>
 </head>
 <body>
+ 
   
-  <h1>Curriculum Vitae</h1>
+  <header>
+    <h1>Reniel Said Fernandez Mota</h1>
+  </header>
+
+
+  <nav>
+      <ul>
+          <li><a href="index.html">Datos Personales</a></li>
+          <li><a href="academicos.html">Formación Academica</a></li>
+          <li><a href="habilidades.html">Habilidades y Destresas</a></li>
+          <li><a href="laboral.html">Experiencia Laboral</a></li>
+         <li><a href="contacto.html">Medios de Contacto</a></li>
+     </ul>
+  </nav>
+
+  <div>
+
+     <section>
+
+       <h2>Datos Personales</h2>
+
+         <article>
+             
+             <ul>
+                 <li><b>Cedula de Identidad: </b></li>
+                 <li><b>Fecha de Nacimiento: </b></li>
+                 <li><b>Lugar de Nacimiento: </b></li>
+                 <li><b>Nacionalidad: </b></li>
+                 <li><b>Edad: </b></li>
+                 <li><b>Direccion Actual: </b></li>
+             </ul>
+
+         </article>
+         <article>
+          <li>29.671.713</li>
+          <li>23-12-2002</li>
+          <li>San Juan de los Morros</li>
+          <li>Venezolano</li>
+          <li>18 años</li>
+          <li>Las Palmas, Sector Morita I, Calle Principal #48, San Juan de los Morros, Estado Guárico.</li>
+         </article>
+
+     </section>
+
+  </div>
+
 
 </body>
 </html>
