Listo CSS, Todo listo

--- a/academicos.html
+++ b/academicos.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formación Academica</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
  
@@ -24,22 +25,17 @@
         </ul>
      </nav>
 
-     <div>
+     <div class="fondo">
 
         <section>
+
             <h2>Formación Academica</h2>
-            <article>
+
+            <article class="a1">
                 <ul>
-                    <li><b>Primaria:</b></li>
-                    <li><b>Secundaria:</b></li>
-                    <li><b>Universitaria:</b></li>
-                </ul>
-            </article>
-            <article>
-                <ul>
-                    <li>U.E Dr. Vicente Peña</li>
-                    <li>U.E.C Batalla Naval del Lago / U.E.C Dr. José Luis Acosta Rodríguez</li>
-                    <li>Universidad Nacional Experimental Romulo Gallégos</li>
+                    <li><b>Primaria:</b>U.E Dr. Vicente Peña</li>
+                    <li><b>Secundaria:</b>U.E.C Batalla Naval del Lago / U.E.C Dr. José Luis Acosta Rodríguez</li>
+                    <li><b>Universitaria:</b>Universidad Nacional Experimental Romulo Gallégos</li>
                 </ul>
             </article>
 
