--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
@@ -25,14 +26,14 @@
      </nav>
 
 
-     <div>
+     <div class="fondo">
 
         <section>
             <h2>Contacto:</h2>
-            <article>
+            <article class="a3">
                 <p><b>Números de teléfono: </b> <img src="img/wslogo.png" alt="Whatsapp" width="15px" height="15px" class="logo"> <img src="img/tgmlogo.png" alt="Telegram" width="15px" height="15px" class="logo"> 0424-3754286 / <img src="img/wslogo.png" alt="Whatsapp" width="15px" height="15px" class="logo"> 0424-3406422</p>
                 <p><b>Correo Electrónico: </b>renielfernandez13@gmail.com</p>
-                <p><b>Facebook: </b><img src="img/fblogo.png" alt="Facebook" width="15px" height="15px" class="logo"><a href="https://www.facebook.com/profile.php?id=100011306610434" target="_blank" >Reniel Fernandez</a></p>
+                <p><b>Facebook: </b><img src="img/fblogo.png" alt="Facebook" width="15px" height="15px" class="logo"> <a href="https://www.facebook.com/profile.php?id=100011306610434" target="_blank" >Reniel Fernandez</a></p>
             </article>
         </section>
      </div>
