--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Datos Personales</title>
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
  
@@ -24,31 +25,23 @@
      </ul>
   </nav>
 
-  <div>
+  <div class="fondo">
 
      <section>
 
        <h2>Datos Personales</h2>
 
-         <article>
+         <article class="a1">
              
              <ul>
-                 <li><b>Cedula de Identidad: </b></li>
-                 <li><b>Fecha de Nacimiento: </b></li>
-                 <li><b>Lugar de Nacimiento: </b></li>
-                 <li><b>Nacionalidad: </b></li>
-                 <li><b>Edad: </b></li>
-                 <li><b>Direccion Actual: </b></li>
+                 <li><b>Cédula de Identidad: </b>29.671.713</li>
+                 <li><b>Fecha de Nacimiento: </b>23-12-2002</li>
+                 <li><b>Lugar de Nacimiento: </b>San Juan de los Morros</li>
+                 <li><b>Nacionalidad: </b>Venezolano</li>
+                 <li><b>Edad: </b>18 años</li>
+                 <li><b>Dirección Actual: </b>Las Palmas, Sector Morita I, Calle Principal #48, San Juan de los Morros, Estado Guárico.</li>
              </ul>
 
-         </article>
-         <article>
-          <li>29.671.713</li>
-          <li>23-12-2002</li>
-          <li>San Juan de los Morros</li>
-          <li>Venezolano</li>
-          <li>18 años</li>
-          <li>Las Palmas, Sector Morita I, Calle Principal #48, San Juan de los Morros, Estado Guárico.</li>
          </article>
 
      </section>
