--- a/laboral.html
+++ b/laboral.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Experiencia Laboral</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
@@ -24,16 +25,20 @@
         </ul>
      </nav>
 
-     <div>
+     <div class="fondo">
 
         <section>
             <h2>Experiencia Laboral</h2>
-            <article>
-                <h3>Trabajos Formales:</h3>
+            <h3>Trabajos Formales:</h3>
+            <article class="a1">
                 <p>Asistete Técnico en Computación, Secretaria de Educación, San Juan de los Morros</p>
             </article>
-            <article>
-                <h3>Otros:</h3>
+
+
+            <h3>Otros:</h3>
+
+
+            <article class="a1">
                 <p>Trabajos Independientes Varios:</p>
                 <ul>
                     <li>Ayudante de Mecánica</li>
