--- a/habilidades.html
+++ b/habilidades.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habilidades</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
@@ -24,13 +25,13 @@
         </ul>
      </nav>
 
-    <div>
+    <div class="fondo">
 
         <section>
             <h2>Habilidades y Destresas</h2>
-            <article>
+            <article class="a2">
                 <table>
-                    <tr>
+                    <tr id="cabezat">
                         <td>Hablidad</td>
                         <td>Nivel de Desempeño</td>
                     </tr>
@@ -56,9 +57,9 @@
                     </tr>
                 </table>
             </article>
-            
-            <article>
                 <h3>Otros:</h3>
+            <article class="a1">
+
                 <ul>
                     <li>Rapido Aprendizaje</li>
                     <li>Entendimiento y Resolucion de problemas</li>
